Fix features grid on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,12 @@ img {
     .features-container {
         margin-top: 1em;
     }
+
+    @media (max-width: 750px) {
+        .features .container {
+            grid-template-columns: 1fr;
+        }
+    }
 }
 
 span {
